changed alert to console and corrected spelling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Hello guys! Welcome back to my Youtube channel</h1>
-    <h2>HTML, CSS, javScript</h2>
+    <h2>HTML, CSS, javaScript</h2>
     <script src="script.js"></script>
 </body>
 </html>
