created a table and changed heading

--- a/index.html
+++ b/index.html
@@ -8,8 +8,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello guys! Welcome back to my Youtube channel</h1>
+    <h1>Hello guys! Elite cohort 3 Batch 1</h1>
     <h2>HTML, CSS, javaScript</h2>
+    <p>DAILY PROGRESS TRACKER</p>
+    <table>
+        <tr>
+            <th>S.No</th>
+            <th>Date</th>
+            <th>Task</th>
+            <th>Link</th>
+            <th>Remarks</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>May 29, 2023</td>
+            <td>Setting up github IO page</td>
+            <td>https://20wh1a1245.github.io/</td>
+            <td>Succesfully hosted a web page</td>
+        </tr>
+    </table>
     <script src="script.js"></script>
 </body>
 </html>
