--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Hello guys! Elite cohort 3 Batch 1</h1>
     <h2>HTML, CSS, javaScript</h2>
-    <p>DAILY PROGRESS TRACKER</p>
+    <p align="center">DAILY PROGRESS TRACKER</p>
     <table>
         <tr>
             <th>S.No</th>
