--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello guys! Elite cohort 3 Batch 1</h1>
-    <h2>HTML, CSS, javaScript</h2>
-    <p align="center">DAILY PROGRESS TRACKER</p>
+    <h1>Welcome to BZ EliteBatch cohort 3 B-1</h1>
+    <h2>This is a web page to track daily progress</h2>
+    <h3 align="center">DAILY PROGRESS TRACKER</h3>
     <table>
         <tr>
             <th>S.No</th>
