updated day 2 tasks

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
             <td>https://20wh1a1245.github.io/</td>
             <td>Succesfully hosted a web page</td>
         </tr>
+        <tr>
+            <td>2</td>
+            <td>May 30, 2023</td>
+            <td>solving problems in mentorpick</td>
+            <td>attempted 4 out of 5 problems</td>
+            <td>solved exclusion product and balanced paranthesis in mentorpick</td>
+        </tr>
     </table>
     <script src="script.js"></script>
 </body>
