--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <td>May 30, 2023</td>
             <td>solving problems in mentorpick</td>
             <td>attempted 4 out of 5 problems</td>
-            <td>solved exclusion product and balanced paranthesis in mentorpick</td>
+            <td>solved exclusion product, balanced paranthesis and got TLE for rotated sorted search array in mentorpick</td>
         </tr>
     </table>
     <script src="script.js"></script>
