updated day 4 tasks

--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
             <td>attempted 4 out of 5 problems</td>
             <td>solved exclusion product, balanced paranthesis and got TLE for rotated sorted search array in mentorpick</td>
         </tr>
+        <tr>
+            <td>3</td>
+            <td>May 31, 2023</td>
+            <td>Codechef Contest</td>
+            <td>attempted 4 problems</td>
+            <td>Succesfully solved 3 problems</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>June 1, 2023</td>
+            <td>solving problems in mentorpick</td>
+            <td>attempted 4 out of 5 problems</td>
+            <td>solved case sensitive palindrome, check anagrams, two sum in mentorpick</td>
+        </tr>
     </table>
     <script src="script.js"></script>
 </body>
