updated day 5 tasks

--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
             <td>attempted 4 out of 5 problems</td>
             <td>solved case sensitive palindrome, check anagrams, two sum in mentorpick</td>
         </tr>
+        <tr>
+            <td>5</td>
+            <td>June 2, 2023</td>
+            <td>solving problems in mentorpick</td>
+            <td>
+                <ul>
+                <li>Climbing Stairs</li>
+                <li>Contains Duplicates</li>
+                <li>Merge Two Sorted Lists</li>
+              </ul>
+            </td>
+            <td>solved above problems in mentorpick</td>
+        </tr>
     </table>
     <script src="script.js"></script>
 </body>
