--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Meenakshi Supriya</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color:rgb(104, 176, 186);">
     <h1>Welcome to BZ EliteBatch cohort 3 B-1</h1>
     <h2>This is a web page to track daily progress</h2>
     <h3 align="center">DAILY PROGRESS TRACKER</h3>
