user card starting

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
             </td>
             <td>solved above problems in mentorpick</td>
         </tr>
+        <tr>
+            <td>6</td>
+            <td>June 3, 2023</td>
+            <td>user card 1</td>
+            <td>
+                20wh1a1245/20wh1a1245.github.io/userCard.html
+            </td>
+            <td>solved above problems in mentorpick</td>
+        </tr>
     </table>
     <script src="script.js"></script>
 </body>
