changed path to relative path

--- a/userCard.html
+++ b/userCard.html
@@ -9,7 +9,7 @@
 <body>
     <h1>User Card</h1>
     <div class = "description">
-        <img src="20wh1a1245/20wh1a1245.github.io/images/childhood.jpg" alt="childhood">
+        <img src="images/childhood.jpg" alt="childhood">
         <p>Meenakshi Supriya</p>
         <p>Learner</p>
     </div>
