--- a/userCard.html
+++ b/userCard.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Card</title>
+    <link rel="stylesheet" href="styleUC.css">
 </head>
 <body>
-    <h1>User Card</h1>
+    
     <div class = "description">
+        <h1>User Card</h1>
         <img src="images/childhood.jpg" alt="">
         <p>Meenakshi Supriya</p>
         <p>Learner</p>
