updated 3rd june tasks

--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
             <td>June 3, 2023</td>
             <td>user card 1</td>
             <td>
-                20wh1a1245/20wh1a1245.github.io/userCard.html
+                <a href="./userCard.html"></a>
+                
             </td>
-            <td>solved above problems in mentorpick</td>
+            <td>In progress</td>
         </tr>
     </table>
     <script src="script.js"></script>
