added content to a attribute

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <td>June 3, 2023</td>
             <td>user card 1</td>
             <td>
-                <a href="./userCard.html"></a>
+                <a href="./userCard.html">Link to user Card</a>
                 
             </td>
             <td>In progress</td>
