--- a/userCard.html
+++ b/userCard.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     
-    <div class = "description">
+    <div class = "card">
         <h1>User Card</h1>
         <img src="images/childhood.jpg" alt="">
-        <p>Meenakshi Supriya</p>
-        <p>Learner</p>
+        <p class="name">Meenakshi Supriya</p>
+        <p class="designation">Learner</p>
     </div>
     
 </body>
