added left margin

--- a/userCard.html
+++ b/userCard.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="styleUC.css">
 </head>
 <body>
-    
-    <div class = "card">
-        <h1>User Card</h1>
-        <img src="images/childhood.jpg" alt="">
-        <p class="name">Meenakshi Supriya</p>
-        <p class="designation">Learner</p>
+    <div class="container">
+        <h1>User Card</h1>    
+        <div class = "card">
+            <img src="images/childhood.jpg" alt="">
+            <p class="name">Meenakshi Supriya</p>
+            <p class="designation">Learner</p>
+        </div>
     </div>
-    
 </body>
 </html>
