--- a/userCard.html
+++ b/userCard.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>User Card</h1>    
         <div class = "card">
-            <img src="images/childhood.jpg" alt="">
+            <img class="childImage" src="images/childhood.jpg" alt="">
             <p class="name">Meenakshi Supriya</p>
             <p class="designation">Learner</p>
         </div>
