updated progress and started user card 2

--- a/index.html
+++ b/index.html
@@ -65,7 +65,17 @@
             <td>June 3, 2023</td>
             <td>user card 1</td>
             <td>
-                <a href="./userCard.html">Link to user Card</a>
+                <a href="./userCard.html">Link to user Card 1</a>
+                
+            </td>
+            <td>User Card 1 completed</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>June 5, 2023</td>
+            <td>user card 2</td>
+            <td>
+                <a href="./userCard2.html">Link to user Card 2</a>
                 
             </td>
             <td>In progress</td>
