--- a/userCard2.html
+++ b/userCard2.html
@@ -15,6 +15,9 @@
             <p class="name">Meenakshi Supriya</p>
             <p class="designation">Learner</p>
         </div>
+
+        <button onclick="changeMyPic()" class="toggleButton">Click here to change the pic</button>
     </div>
+
 </body>
 </html>
