added functionality for button

--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
             <td>In progress</td>
         </tr>
     </table>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
