--- a/userCard.html
+++ b/userCard.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Card</title>
+    <title>User Card 1</title>
     <link rel="stylesheet" href="styleUC.css">
 </head>
 <body>
     <div class="container">
         <h1>User Card</h1>    
         <div class = "card">
-            <img class="childImage" src="images/childhood.jpg" alt="" style="width: 90%; height: 25%;">
+            <img class="childImage" src="images/childhood.jpg" alt="" style="width: 90%; height: 5%;">
             <p class="name">Meenakshi Supriya</p>
             <p class="designation">Learner</p>
         </div>
