--- a/userCard2.html
+++ b/userCard2.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Card</title>
+    <title>User Card 2</title>
     <link rel="stylesheet" href="styleUC.css">
+
 </head>
 <body>
     <div class="container">
@@ -18,6 +19,7 @@
 
         <button onclick="changeMyPic()" class="toggleButton">Click here to change the pic</button>
     </div>
+    <script src="./script.js"></script>
 
 </body>
 </html>
