--- a/userCard2.html
+++ b/userCard2.html
@@ -12,9 +12,9 @@
     <div class="container">
         <h1>User Card</h1>    
         <div class = "card">
-            <img class="childImage" src="images/childhood.jpg" alt="" style="width: 90%; height: 25%;">
-            <p class="name">Meenakshi Supriya</p>
-            <p class="designation">Learner</p>
+            <img class="childImage" id = "myVhildImg" src="images/childhood.jpg" alt="" style="width: 90%; height: 25%;">
+            <p class="name" id="myFirstName">Meenakshi Supriya</p>
+            <p class="designation" id="myDesignation">Learner</p>
         </div>
 
         <button onclick="changeMyPic()" class="toggleButton">Click here to change the pic</button>
