made some changes

--- a/userCard2.html
+++ b/userCard2.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>User Card</h1>    
+        <h1>User Card 2</h1>    
         <div class = "card">
-            <img class="childImage" id = "myChildImg" src="images/childhood.jpg" alt="" style="width: 90%; height: 25%;">
+            <img class="childImage" id = "myChildImg" src="./childhood.jpg" alt="" style="width: 90%; height: 25%;">
             <p class="name" id="myFirstName">Meenakshi Supriya</p>
             <p class="designation" id="myDesignation">Learner</p>
         </div>
