modified the status of daily progress

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <a href="./userCard2.html">Link to user Card 2</a>
                 
             </td>
-            <td>In progress</td>
+            <td>User card 2 completed</td>
         </tr>
     </table>
     <!-- <script src="script.js"></script> -->
