added js file for user card 3

--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
             </td>
             <td>User card 2 completed</td>
         </tr>
+        <tr>
+            <td>8</td>
+            <td>June 6, 2023</td>
+            <td>user card 3</td>
+            <td>
+                <a href="./userCard3.html">Link to user Card 3</a>
+                
+            </td>
+            <td>User card 3 completed</td>
+        </tr>
     </table>
     <!-- <script src="script.js"></script> -->
 </body>
