updated 7th and 8th june progress

--- a/index.html
+++ b/index.html
@@ -90,6 +90,26 @@
             </td>
             <td>User card 3 completed</td>
         </tr>
+        <tr>
+            <td>9</td>
+            <td>June 7, 2023</td>
+            <td>Codechef contest</td>
+            <td>read 4 problem statements</td>
+            <td>Succesfully solved 2 problems</td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>June 8, 2023</td>
+            <td>solving mentorpick problems</td>
+            <td> attempted 5 problems</td>
+            <td>solved 3 problems
+                <ul>
+                    <li>Missing Number</li>
+                    <li>Reverse Linked List</li>
+                    <li>Sum without using Plus and Minus</li>
+                  </ul>
+            </td>
+        </tr>
     </table>
     <!-- <script src="script.js"></script> -->
 </body>
