updated daily progress

--- a/index.html
+++ b/index.html
@@ -110,6 +110,20 @@
                   </ul>
             </td>
         </tr>
+        <tr>
+            <td>11</td>
+            <td>June 9, 2023</td>
+            <td>solving mentorpick problems</td>
+            <td> attempted 5 problems</td>
+            <td>solved 4 problems
+                <ul>
+                    <li>Count Set Bits</li>
+                    <li>Best Time to Buy and Sell Stock</li>
+                    <li>Remove Nth Node from List End</li>
+                    <li>Longest Consecutive Sequence</li>
+                  </ul>
+            </td>
+        </tr>
     </table>
     <!-- <script src="script.js"></script> -->
 </body>
