--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                   </ul>
             </td>
         </tr>
+       
         <tr>
             <td>11</td>
             <td>June 9, 2023</td>
@@ -122,6 +123,28 @@
                     <li>Remove Nth Node from List End</li>
                     <li>Longest Consecutive Sequence</li>
                   </ul>
+            </td>
+        </tr>
+        <tr>
+            <td>12</td>
+            <td>June 10, 2023</td>
+            <td>solved leetcode problem</td>
+            <td> attempted 2 problems</td>
+            <td>solved 1 problem
+                <ul>
+                    <li>Find First and Last Position of Element in Sorted Array</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td>13</td>
+            <td>June 12, 2023</td>
+            <td>solving mentorpick problems</td>
+            <td> attempted 3 problems</td>
+            <td>solved 1 problem
+                <ul>
+                    <li>Reorder List</li>
+                </ul>
             </td>
         </tr>
     </table>
