--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
             <td>June 12, 2023</td>
             <td>solving mentorpick problems</td>
             <td> attempted 3 problems</td>
-            <td>solved 1 problem
+            <td>solved 2 problems
                 <ul>
                     <li>Reorder List</li>
+                    <li>Houe Robber</li>
                 </ul>
             </td>
         </tr>
