corrected house spelling

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <td>solved 2 problems
                 <ul>
                     <li>Reorder List</li>
-                    <li>Houe Robber</li>
+                    <li>House Robber</li>
                 </ul>
             </td>
         </tr>
