updated daily progress tracker

--- a/index.html
+++ b/index.html
@@ -148,6 +148,19 @@
                 </ul>
             </td>
         </tr>
+        <tr>
+            <td>14</td>
+            <td>June 13, 2023</td>
+            <td>solving mentorpick problems</td>
+            <td> attempted 4 problems</td>
+            <td>solved 3 problems
+                <ul>
+                    <li>Palindromic Substrings</li>
+                    <li>Are Trees Identical</li>
+                    <li>House Robber II</li>
+                </ul>
+            </td>
+        </tr>
     </table>
     <!-- <script src="script.js"></script> -->
 </body>
