updated daily progress

--- a/index.html
+++ b/index.html
@@ -161,6 +161,19 @@
                 </ul>
             </td>
         </tr>
+        <tr>
+            <td>15</td>
+            <td>June 15, 2023</td>
+            <td>solving mentorpick problems</td>
+            <td> attempted 5 problems</td>
+            <td>solved 3 problems
+                <ul>
+                    <li>Subtree of Another Tree</li>
+                    <li>Invert Binary Tree</li>
+                    <li>Maximum Depth of a binary tree</li>
+                </ul>
+            </td>
+        </tr>
     </table>
     <!-- <script src="script.js"></script> -->
 </body>
