updated daily progress

--- a/index.html
+++ b/index.html
@@ -187,6 +187,19 @@
                 </ul> -->
             </td>
         </tr>
+        <tr>
+            <td>17</td>
+            <td>June 17, 2023</td>
+            <td>sql practice</td>
+            <td> attempted 5 problems</td>
+            <td>solved 5 problems
+                <!-- <ul>
+                    <li>Subtree of Another Tree</li>
+                    <li>Invert Binary Tree</li>
+                    <li>Maximum Depth of a binary tree</li>
+                </ul> -->
+            </td>
+        </tr>
     </table>
     <!-- <script src="script.js"></script> -->
 </body>
